--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "mocha": "^6.2.1",
+    "mocha-env-reporter": "^4.0.0",
+    "chai": "^4.2.0",
+    "axios": "^0.19.0",
+  },
   "author": "uriyaa@wix.com",
   "license": "ISC"
 }
