--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mocha-env-reporter": "^4.0.0",
     "chai": "^4.2.0",
     "axios": "^0.19.0",
+    "@wix/serverless-testkit": "latest"
   },
   "author": "uriyaa@wix.com",
   "license": "ISC"
